--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,7 @@
                         <div class="loader" id="loader"></div>
                     </button>
                 </form>
+                <p id="wordCountDisplay">0 words</p>
             </div>
 
             <div class="results-section" id="resultsSection">
